-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 7u76, 8u60, 9
-
Component/s: hotspot
-
b57
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8082511 | emb-9 | Zoltan Majo | P3 | Resolved | Fixed | team |
| JDK-8086439 | 8u65 | Zoltan Majo | P3 | Resolved | Fixed | b01 |
| JDK-8074986 | 8u60 | Zoltan Majo | P3 | Resolved | Fixed | b08 |
| JDK-8137642 | emb-8u65 | Unassigned | P3 | Resolved | Fixed | b01 |
| JDK-8077454 | emb-8u60 | Zoltan Majo | P3 | Resolved | Fixed | team |
| JDK-8077944 | 7u91 | Andreas Eriksson | P3 | Resolved | Fixed | b01 |
| JDK-8074987 | 7u85 | Andreas Eriksson | P3 | Closed | Fixed | b08 |
For example, in the sparc.ad file, the 'fpclass' function is used to decide if a float node's content is +0.0:
predicate((n->getf() == 0) && (fpclass(n->getf()) == FP_PZERO));
On Solaris, 'fpclass' returns FP_PZERO if the parameter is +0.0f and FP_NZERO if the parameter is -0.0f. On Linux, however, 'fpclass' is not available and therefore 'fpclassify' is used.
'fpclassify' does not distinguish between ±0.0f, it returns FP_ZERO for both +0.0f and -0.0f.
- backported by
-
JDK-8074986 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8077454 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8077944 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8082511 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8086439 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8137642 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Resolved
-
-
JDK-8074987 C2 code generator can replace -0.0f with +0.0f on Linux
-
- Closed
-