8074869: C2 code generator can replace -0.0f with +0.0f on Linux

Instead of 'fpclass', use cast float->int and double->long to check if value is +0.0f and +0.0d, respectively.

Reviewed-by: kvn, simonis, dlong